--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,7 @@
    "outputs": [],
    "source": [
     "def restaurant_rating(restaurant):\n",
-    "    for key, value in "
+    "    for key, value in restaurant.items()"
    ]
   },
   {
