Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,9 @@
    "outputs": [],
    "source": [
     "def restaurant_rating(restaurant):\n",
-    "    for key, value in restaurant.items()"
+    "    for key, value in restaurant.items():\n",
+    "        return \n",
+    "    "
    ]
   },
   {
