--- a/index.ipynb
+++ b/index.ipynb
@@ -259,7 +259,7 @@
    "source": [
     "def restaurant_rating(restaurant):\n",
     "    for key, value in restaurant.items():\n",
-    "        return restaurant[]\n",
+    "        return restaurant['rating']\n",
     "    "
    ]
   },
