--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    if restaurant_rating(restaurant) > "
+    "    return restaurant_rating(restaurant) > restaurant_r"
    ]
   },
   {
