Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,12 +323,14 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    return restaurant_rating(restaurant) > restaurant_rating(alternative)"
+    "    if restaurant['rating'] > alternative['rating']:\n",
+    "        return True\n",
+    "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +339,7 @@
        "False"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
