--- a/index.ipynb
+++ b/index.ipynb
@@ -409,7 +409,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if resta"
+    "    if len(restaurant)"
    ]
   },
   {
